--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="form-container">
             <div class="logo">
                 <img src="img/download.png" alt="">
+                <a href="https://internship.zuri.team"> Link to The Internship</a>
             </div>
             <div class="signin-signup">
                 <form action="" class="sign-in-form">
