--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script src="jses6/index.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,300&display=swap" rel="stylesheet">
+    
+    <style>
+        .logo {
+        color="black";
+        }
+    </style>
 </head>
 <body>
     <div class="box">
