--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <style>
         .logo {
         color="black";
+            margin-top="-50px";
         }
+       
     </style>
 </head>
 <body>
